libstdc++-v3/testsuite/26_numerics/midpoint/pointer_neg.cc
// Copyright (C) 2020 Free Software Foundation, Inc.
//
// This file is part of the GNU ISO C++ Library.  This library is free
// software; you can redistribute it and/or modify it under the
// terms of the GNU General Public License as published by the
// Free Software Foundation; either version 3, or (at your option)
// any later version.

// This library is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.

// You should have received a copy of the GNU General Public License along
// with this library; see the file COPYING3.  If not see
// <http://www.gnu.org/licenses/>.

// { dg-options "-std=gnu++2a" }
// { dg-do compile { target c++2a } }

#include <numeric>

// LWG 3200. midpoint should not constrain T is complete
struct Incomplete* pinc = 0;
auto p1 = std::midpoint(pinc, pinc); // { dg-error "here" }

// { dg-error "incomplete type" "" { target *-*-* } 0 }
